syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcClientServices";


service CategoryService {
  rpc AddCategory (AddCategoryRequest) returns (AddCategoryResponse);
  rpc GetCategoryByName (GetCategoryByNameRequest) returns (GetCategoryByNameResponse);
  rpc GetAllCategories (GetAllCategoriesRequest) returns (GetAllCategoriesResponse);
}

message GrpcCategory {
  int32 id = 1;
  string name = 2;
}


message AddCategoryRequest {
  GrpcCategory category = 1;
}

message AddCategoryResponse {
  GrpcCategory category = 1;
}

message GetCategoryByNameRequest{
  GrpcCategory category = 1;
}

message GetCategoryByNameResponse{
  GrpcCategory category = 1;
}

message GetAllCategoriesRequest {

}

message GetAllCategoriesResponse {
  repeated GrpcCategory categories = 1;
}
